--- a/deno.json
+++ b/deno.json
@@ -3,5 +3,11 @@
     "dev": "deno run -A --node-modules-dir --watch=src/,static/ npm:vite",
     "build": "deno run -A --node-modules-dir npm:vite build",
     "preview": "deno run -A --node-modules-dir npm:vite preview"
+  },
+  "lint": {
+    "exclude": ["DLCsitsit/web/**", "web/**"]
+  },
+  "fmt": {
+    "exclude": ["DLCsitsit/web/**", "web/**"]
   }
 }
