--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-	"name": "web",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"dependencies": {
-		"@sveltejs/kit": "^2.37.0",
-		"clsx": "^2.1.1",
-		"cookie": "^1.0.2",
-		"set-cookie-parser": "^2.7.1",
-		"svelte": "^5.38.6",
-		"vite": "^7.1.4",
-		"devalue": "^5.0.0"
-	},
-	"devDependencies": {
-		"@deno/svelte-adapter": "^0.1.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/adapter-static": "^3.0.9",
-		"@sveltejs/vite-plugin-svelte": "^6.1.4",
-		"svelte-check": "^4.0.0",
-		"svelte-preprocess": "^6.0.3",
-		"typescript": "^5.0.0"
-	}
+  "name": "web",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+  },
+  "dependencies": {
+    "@sveltejs/kit": "^2.37.0",
+    "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
+    "devalue": "^5.0.0",
+    "set-cookie-parser": "^2.7.1",
+    "svelte": "^5.38.6"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-static": "^3.0.9",
+    "@sveltejs/vite-plugin-svelte": "^6.1.4",
+    "svelte-check": "^4.0.0",
+    "typescript": "^5.4.0",
+    "vite": "^6.3.0"
+  }
 }
