--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte": "^5.38.6"
   },
   "devDependencies": {
+    "@deno/svelte-adapter": "^0.1.0",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "svelte-check": "^4.0.0",
